Archive2/5e/23df44c989f45a/output
main.cpp:7:13: error: constexpr constructor never produces a constant expression [-Winvalid-constexpr]
  constexpr X() {}
            ^
main.cpp:7:13: note: non-constexpr constructor 'type' cannot be used in a constant expression
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/type_traits:1833:13: note: declared here
      union type
            ^
main.cpp:12:17: error: constexpr variable 'x' must be initialized by a constant expression
    constexpr X x;
                ^
main.cpp:7:13: note: non-constexpr constructor 'type' cannot be used in a constant expression
  constexpr X() {}
            ^
main.cpp:12:17: note: in call to 'X()'
    constexpr X x;
                ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/type_traits:1833:13: note: declared here
      union type
            ^
2 errors generated.
